--- a/src/components/App.css
+++ b/src/components/App.css
@@ -43,6 +43,7 @@ a {
 }
 
 .App__band-pics {
+  margin-top: -18px;
   max-width: 100vw;
   display: flex;
   align-items: center;
@@ -67,7 +68,7 @@ a {
 
 .App__links {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   margin-bottom: 32px;
   margin-top: 10px;
@@ -76,12 +77,10 @@ a {
 }
 
 .App__link-item--middle {
-  flex: 2;
   margin: 0 28px;
 }
 
 .App__link-item {
-  flex: 1;
   margin: 10px 0;
   font-size: 64px;
 }
