--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,17 +1,24 @@
 .App {
   text-align: center;
-  background-color: black;
+  background-color: #020202;
   min-width: 375px;
   max-width: 100vw;
+
   min-height: 100vh;
   color: lightgrey;
   font-family: monospace;
   font-weight: 700;
 }
 
+.app-container {
+  max-width: 1800px;
+  margin: 0 auto;
+}
+
 a {
   color: lightgrey;
 }
+
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -57,6 +64,24 @@ a {
   max-width: 100%;
 }
 
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+.App__logo:hover {
+  animation: shake 0.25s;
+}
+
 .App__band-pics {
   margin-bottom: 64px;
 }
@@ -71,10 +96,28 @@ a {
   justify-content: space-evenly;
   align-items: center;
   margin-bottom: 32px;
+  margin-top: 32px;
+  flex-wrap: wrap;
+}
+.App__links--components {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   margin-top: 10px;
   flex-wrap: wrap;
-
 }
+
+@media only screen and (max-width: 768px) {
+  .App__links--components {
+    margin: 0 auto;
+    max-width: 50%;
+  }
+}
+
+.App__links--component-item {
+  margin-bottom: 20px;
+}
+
 
 .App__link-item--middle {
   margin: 0 28px;
